--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "node --watch --env-file=.env ./src/server.js"
   },
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "joi": "^18.0.1",
     "mongoose": "^8.18.3",
+    "mongoose-sequence": "^6.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
