--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "node --watch --env-file=.env ./src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
