--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node --watch --env-file=.env ./src/server.js"
   },
   "dependencies": {
+    "@paypal/paypal-server-sdk": "^2.0.0",
     "bcrypt": "^6.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
